--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -82,7 +82,7 @@ jobs:
             GH_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
           continue-on-error: true
         - name: Continuous Releaser
-        - uses: softprops/action-gh-release@v2
+          uses: softprops/action-gh-release@v2
           with:
             name: "Continuous Build (${{ env.APP_VERSION }})"
             tag_name: "nightly"
