nightly doesn't have aarch64 lol

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -17,9 +17,9 @@ jobs:
           - runs-on: ubuntu-latest
             name: "Build AppImage"
             arch: x86_64
-          - runs-on: ubuntu-24.04-arm
-            name: "Build AppImage"
-            arch: aarch64
+#          - runs-on: ubuntu-24.04-arm
+#            name: "Build AppImage"
+#            arch: aarch64
     steps:
     - uses: actions/checkout@v4
 
@@ -59,9 +59,9 @@ jobs:
           with:
             name: AppImage-x86_64
 
-        - uses: actions/download-artifact@v4.3.0
-          with:
-            name: AppImage-aarch64
+#        - uses: actions/download-artifact@v4.3.0
+#          with:
+#            name: AppImage-aarch64
 
         - uses: actions/download-artifact@v4.3.0
           with:
